# kguiaddons

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5GuiAddonsConfig.cmake.in  KF6GuiAddonsConfig.cmake.in  README.md  README.md.license  metainfo.yaml
autotests/: CMakeLists.txt  kblurhashtest.cpp  kcolorutilstest.cpp  kcountryflagemojiiconenginetest.cpp  kcursorsavertest.cpp  kcursorsavertest.h  keysequencerecordertest.cpp  keysequencerecordertest.h  kgeourihandlertest.cpp  kiconutilstest.cpp  kiconutilstest.h  kinputsequencetest.cpp  kinputsequencetest.h  kkeysequencerecordertest.cpp  kkeysequencerecordertest.h  kurlhandlertest.cpp  kurlhandlertest.h  kwordwraptest.cpp  pythontest.py  urlhandlertest.cpp  urlhandlertest.h
examples/python/: kcolorschemewatcher.py  kdatevalidator.py  kiconutils.py  ksystemclipboard.py
python/: CMakeLists.txt  bindings.h  bindings.xml
src/: CMakeLists.txt  config.h.in  kguiaddons-index.qdoc  kguiaddons.qdoc  kguiaddons.qdocconf  kguiaddons_config.h.cmake
src/android/: AndroidManifest.xml  CMakeLists.txt  KF6GuiAddons-android-dependencies.xml  build.gradle
src/android/org/kde/guiaddons/: KSystemInhibitor.java  KWindowInsetsController.java
src/colors/: kcolorcollection.cpp  kcolorcollection.h  kcolormanipulation.cpp  kcolormanipulation.h  kcolormimedata.cpp  kcolormimedata.h  kcolorschemewatcher.cpp  kcolorschemewatcher.h  kcolorschemewatcher_mac.h  kcolorschemewatcher_mac.mm  kcolorschemewatcher_qt.cpp  kcolorschemewatcher_qt.h  kcolorschemewatcher_win.cpp  kcolorschemewatcher_win.h  kcolorschemewatcher_xdg.cpp  kcolorschemewatcher_xdg.h  kcolorschemewatcherbackend.cpp  kcolorschemewatcherbackend.h  kcolorspaces.cpp  kcolorspaces_p.h  kcolorutils.cpp  kcolorutils.h  kguiaddons_colorhelpers_p.h  kwindowinsetscontroller.cpp  kwindowinsetscontroller.h
src/fonts/: kfontutils.cpp  kfontutils.h
src/geo-scheme-handler/: CMakeLists.txt  google-maps-geo-handler.desktop  google-maps-geo-handler.desktop.license  kgeourihandler.cpp  kgeourihandler_p.h  main.cpp  openstreetmap-geo-handler.desktop  qwant-maps-geo-handler.desktop  wheelmap-geo-handler.desktop
src/qml/: CMakeLists.txt  blurhashimageprovider.cpp  blurhashimageprovider.h  kcolorutilssingleton.cpp  kcolorutilssingleton.h  kguiaddonsplugin.cpp  privateplugin.cpp  privateplugin.h  systeminhibitor.cpp  systeminhibitor.h  types.h
src/recorder/: keyboardgrabber.cpp  keyboardgrabber_p.h  keysequencerecorder.cpp  keysequencerecorder.h  kinputsequence.cpp  kinputsequence.h  kkeysequencerecorder.cpp  kkeysequencerecorder.h  shortcutinhibition_p.h  tabletevents.cpp  tabletevents.h  waylandinhibition.cpp  waylandinhibition_p.h
src/systemclipboard/: ksystemclipboard.cpp  ksystemclipboard.h  qtclipboard.cpp  qtclipboard_p.h  qwaylandpipewritehelper.cpp  qwaylandpipewritehelper_p.h  waylandclipboard.cpp  waylandclipboard_p.h  waylandpipewriterhelper.cpp  waylandpipewriterhelper_p.h  wlrwaylandclipboard.cpp  wlrwaylandclipboard_p.h
src/systemclipboard/tests/: paste.cpp
src/text/: kdatevalidator.cpp  kdatevalidator.h  kwordwrap.cpp  kwordwrap.h
src/util/: kblurhash.cpp  kblurhash.h  kcountryflagemojiiconengine.cpp  kcountryflagemojiiconengine.h  kcursorsaver.cpp  kcursorsaver.h  kiconutils.cpp  kiconutils.h  kimagecache.h  kjobwindows.cpp  kjobwindows.h  klocalimagecacheimpl.cpp  klocalimagecacheimpl.h  kmodifierkeyinfo.cpp  kmodifierkeyinfo.h  kmodifierkeyinfoprovider.cpp  kmodifierkeyinfoprovider_dummy.cpp  kmodifierkeyinfoprovider_p.h  kmodifierkeyinfoprovider_wayland.cpp  kmodifierkeyinfoprovider_wayland.h  kmodifierkeyinfoprovider_x11.cpp  kmodifierkeyinfoprovider_xcb.cpp  kmodifierkeyinfoprovider_xcb.h  ksysteminhibitor.cpp  ksysteminhibitor.h  ksysteminhibitor_android.cpp  ksysteminhibitor_dbus.cpp  ksysteminhibitor_dummy.cpp  ksysteminhibitor_windows.cpp  ktabletpadcontroller.cpp  ktabletpadcontroller.h  kurlhandler_p.cpp  kurlhandler_p.h  urlhandler.cpp  urlhandler.h
tests/: CMakeLists.txt  clipboardpixmaptest.cpp  clipboardtest.cpp  clipboardtest.py  kcolorcollectiontest.cpp  kcolorschemewatchertest.cpp  kcolorutils.qml  kcountryflagemojiiconenginedemo.cpp  kcursorsavergui_test.cpp  kcursorsavertest.cpp  kmodifierkeyinfotest.cpp  openurltest.cpp
